--- a/style.css
+++ b/style.css
@@ -9,6 +9,28 @@
   body {
     background-color: var(--p1-c3);
   }
+
+  #screenshot-btn {
+    display: flex;
+    gap: 20px;
+    height: 65px;
+    border: 0px;
+    border-radius: 16px;
+    background-color: transparent;
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 24px;
+    font-weight: 500;
+    align-items: center;
+    transition: 0.3s ease;
+  }
+  #screenshot-btn:hover {
+
+    background-color: rgba(255, 255, 255, 0.485);
+  }
   
   .center_top {
     display: flex;
@@ -32,10 +54,9 @@
     min-width: 340px;
     min-height: 340px;
   }
-  .center_top .fact {
+  .fact {
     align-self: center;
     padding: 30px;
-    padding-left: 50px;
     font-family: "Kanit", sans-serif;
     max-width: 700px;
     min-width: 700px;
@@ -70,6 +91,7 @@
     background-color: var(--p1-c2);
     opacity: 0.7;
     color: var(--p1-c1);
+    transition: 0.3s ease;
   }
   
   .main {
@@ -127,6 +149,9 @@
     right: 40px;
     font-family: "Kanit", sans-serif;
     gap: 10px;
+    transition: 0.3s ease;
+    padding: 10px;
+    border-radius: 16px;
   }
   
   .signature span {
@@ -134,10 +159,13 @@
     color: black;
     position: relative;
     padding-left: 7px;
-    bottom: 10px;
+    bottom: 9px;
   }
   .signature a {
     text-decoration: none;
+  }
+  .signature:hover {
+    background-color: rgba(255, 255, 255, 0.485);
   }
   
   .palette-picker {
@@ -163,7 +191,7 @@
   }
   
   .palette-picker input[type="radio"]:checked + span {
-    text-decoration:line-through;
+    text-decoration:underline;
     text-underline-offset: 7px;
   }
   .palette-picker b {
@@ -173,3 +201,155 @@
   .center_container {
     cursor: pointer;
   }
+
+  @media  screen and (max-width: 480px) {
+  .main {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .center_container {
+    min-width: 450px;
+    margin-top: 40px;
+  }
+  .center_top {
+    border: 8px solid var(--p1-c4);
+    margin-top: 50px;
+
+  }
+  .fact {
+    max-width: 100vw;
+    min-width: 0px;
+    font-size: 24px;
+  }
+  .center_tag {
+    padding: 10px;
+    border-bottom: 16px solid var(--p1-c1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family:"Kanit", sans-serif;
+    color: var(--p1-c1);
+    font-size: 48px;
+    justify-self: flex-start;
+    flex: 0.3;
+    margin-left: 0px;
+    height: 100vh;
+  }
+  .palette-picker {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0px;
+  }
+  
+  .palette-picker label {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+  }
+  
+  .palette-picker input[type="radio"] {
+    display: none;
+  }
+  
+  .palette-picker span {
+    margin-left: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 2px;
+    font-size: 24px;
+  }
+  
+  .palette-picker input[type="radio"]:checked + span {
+    text-decoration:underline;
+    text-underline-offset: 7px;
+  }
+  .palette-picker b {
+    font-weight: normal;
+    padding-right: 30px;
+    font-size: 16px;
+    display: none;
+  }
+  #randomImage {
+    width: 150px;
+    border-radius: 50%;
+    border: 12px solid var(--p1-c4);
+    animation-name: img_anim2;
+    animation-duration: 4s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: none;
+    animation-play-state: running;
+    min-width: 150px;
+    min-height: 150px;
+    position: absolute;
+    top: 195px;
+    left: 270px;
+  }
+  @keyframes img_anim2 {
+    0% {
+        transform: translate(0px, 0px);
+    }
+    50% {
+      transform: translate(10px, -10px);
+  }
+    100% {
+      transform: translate(0px, 0px);
+  }
+    }
+
+    #button {
+      color: var(--p1-c4);
+      background-color: var(--p1-c2);
+      width: 120px;
+      height: 60px;
+      border: none;
+      margin-top: 20px;
+      border-radius: 32px;
+      font-size: 16px;
+      cursor: pointer;
+      position: fixed;
+      right: 16px;
+      top: 5px;
+    }
+    #button:hover {
+      background-color: var(--p1-c2);
+      opacity: 0.7;
+      color: var(--p1-c1);
+    }
+    html {
+      margin: 0px;
+      padding: 0px;
+    }
+    .signature {
+      display: flex;
+      position: fixed;
+      bottom: 15px;
+      right: 20px;
+      padding: 5px;
+      border-radius: 12px;
+      align-items: center;
+    }
+    #screenshot-btn {
+      gap: 10px;
+      width: 90px;
+      height: 50px;
+      top:auto;
+      right: auto;
+      bottom: 15px;
+      left: 20px;
+      padding: 10px;
+      font-size: 15px;
+      font-weight: 400;
+      border: none;
+      flex-direction: row;
+      border-radius: 12px;
+  }
+
+  #screenshot-btn img{
+    max-width: 25px;
+    max-height: 25px;
+  }
+}
