--- a/style.css
+++ b/style.css
@@ -210,20 +210,26 @@
   .center_container {
     min-width: 450px;
     margin-top: 40px;
+    margin-bottom: 100px;
   }
   .center_top {
     border: 8px solid var(--p1-c4);
     margin-top: 50px;
+    margin-left: 12px;
+    margin-right: 12px;
 
   }
   .fact {
     max-width: 100vw;
     min-width: 0px;
     font-size: 24px;
+    font-weight: 500;
   }
   .center_tag {
-    padding: 10px;
+    padding: 20px;
     border-bottom: 16px solid var(--p1-c1);
+    border-radius: 0px 0px 32px 32px;
+    background-color: var(--p1-c4);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -233,13 +239,14 @@
     justify-self: flex-start;
     flex: 0.3;
     margin-left: 0px;
-    height: 100vh;
+    margin-right: 0px;
   }
   .palette-picker {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 0px;
+    margin-top: 30px;
   }
   
   .palette-picker label {
@@ -258,6 +265,7 @@
     cursor: pointer;
     padding: 2px;
     font-size: 24px;
+    text-shadow: 1px 1px rgba(244, 231, 231, 0.627);
   }
   
   .palette-picker input[type="radio"]:checked + span {
@@ -285,7 +293,7 @@
     min-width: 150px;
     min-height: 150px;
     position: absolute;
-    top: 195px;
+    top: 230px;
     left: 270px;
   }
   @keyframes img_anim2 {
@@ -305,24 +313,25 @@
       background-color: var(--p1-c2);
       width: 120px;
       height: 60px;
-      border: none;
+      border: 1px solid var(--p1-c1);
+      border-bottom: 8px solid var(--p1-c1);
       margin-top: 20px;
       border-radius: 32px;
-      font-size: 16px;
+      font-size: 20px;
+      font-weight: 500;
+      font-family:"Kanit", sans-serif;
       cursor: pointer;
       position: fixed;
       right: 16px;
       top: 5px;
+
     }
     #button:hover {
       background-color: var(--p1-c2);
       opacity: 0.7;
       color: var(--p1-c1);
     }
-    html {
-      margin: 0px;
-      padding: 0px;
-    }
+
     .signature {
       display: flex;
       position: fixed;
@@ -331,6 +340,7 @@
       padding: 5px;
       border-radius: 12px;
       align-items: center;
+      margin-top: 60px;
     }
     #screenshot-btn {
       gap: 10px;
@@ -351,5 +361,15 @@
   #screenshot-btn img{
     max-width: 25px;
     max-height: 25px;
+  }
+  html, body {
+    margin: 0;
+    padding: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
+
+  .push_footer {
+    margin-top: 100px;
   }
 }
