--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@
     flex: 0.48;
     margin-left: 20px;
     height: 100vh;
+    max-width: 100%;
   }
   
   @keyframes img_anim {
@@ -208,15 +209,17 @@
     justify-content: space-between;
   }
   .center_container {
-    min-width: 450px;
+    min-width: 0px;
     margin-top: 40px;
     margin-bottom: 100px;
+    max-width: 100%;
   }
   .center_top {
     border: 8px solid var(--p1-c4);
     margin-top: 50px;
     margin-left: 12px;
     margin-right: 12px;
+    max-width: 90%;
 
   }
   .fact {
@@ -240,6 +243,10 @@
     flex: 0.3;
     margin-left: 0px;
     margin-right: 0px;
+  }
+  .center_tag b {
+    font-size: 40px;
+    margin-top: 5px;
   }
   .palette-picker {
     display: flex;
@@ -294,7 +301,7 @@
     min-height: 150px;
     position: absolute;
     top: 230px;
-    left: 270px;
+    right: 220px;
   }
   @keyframes img_anim2 {
     0% {
@@ -371,5 +378,9 @@
 
   .push_footer {
     margin-top: 100px;
+  }
+  main {
+    max-width: 100%;
+    max-width: 100%;
   }
 }
